2008-04-28  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_is_mutual) : 
	changed order of arguments to be consistent with is_loop
	and is_multiple
	* interfaces/python/src/graphobject.c 
	(igraphmodule_Graph_is_mutual) : updated

	* src/vector.pmt (igraph_vector_binsearch2) :
	repair bug when vector is empty

2008-04-28  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/topology.c (igraph_isomorphic) : bugfix, closes issue #117
	
2008-04-27  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/graphobject.c
	(igraphmodule_Graph_is_mutual) : added

	* src/cocitation.c (igraph_similarity_inverse_log_weighted) : added

	* examples/simple/igraph_similarity.* : added test case for
	inverse log-weighted similarity

	* interfaces/python/src/graphobject.c
	(igraphmodule_Graph_similarity_inverse_log_weighted) : added

2008-04-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_is_mutual) : added

2008-04-24  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/foreign-graphml.c : fixed bug when a graph attribute was
	defined but its value not given in a GraphML file

2008-04-09  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/layout.c (igraph_reingold_tilford) :
	really fixed issue #100 :)
	* src/layout.c (igraph_reingold_tilford_circular) :
	fixed documentation and the handling of negative X coords
	
2008-04-07  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/structure_generators.c (igraph_weighted_adjacency) : now
	handles fractional edge weights correctly
	
	* src/layout.c (igraph_reingold_tilford) : fixed issue #100
	
2008-04-05  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/structure_generators.c (igraph_weighted_adjacency) : added
	
	* examples/simple/igraph_weighted_adjacency.{c,out} : added
	
2008-04-05  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/cattributes.c (igraph_i_cattribute_add_{edges,vertices}) :
	fixed a memory leak
	
2008-04-03  Tamas Nepusz  <ntamas@rmki.kfki.hu>
